overflow fix

--- a/src/App/App.sass
+++ b/src/App/App.sass
@@ -13,3 +13,5 @@
   button
     padding: 10px
     cursor: pointer
+.modalOpen
+  overflow: hidden
