--- a/src/ui/Modal/index.module.sass
+++ b/src/ui/Modal/index.module.sass
@@ -9,7 +9,7 @@
   flex-direction: column
   justify-content: center
   align-items: center
-  z-index: 1
+  z-index: 100
 .overlay
   position: fixed
   width: 100%
@@ -19,16 +19,23 @@
   right: 0
   bottom: 0
   background-color: rgba(0, 0, 0, .4)
-  z-index: 2
+  z-index: 101
   cursor: pointer
 .content
+  position: relative
   color: black
   border: 1px solid #e6e6e6
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1)
-  border-radius: 10px
+  border-radius: 5px
   overflow: auto
   background-color: #f8f8f8
-  z-index: 3
-  max-width: 500px
-  min-height: 400px
+  z-index: 102
+  max-width: 400px
+  min-height: 220px
   padding: 10px
+.closeBtn
+  display: flex
+  position: absolute
+  top: 5px
+  right: 5px
+  cursor: pointer
